force-app/main/default/objects/ClienteCondicaoPagamento__c/ClienteCondicaoPagamento__c.object-meta.xml
<CustomObject>
    <label>Cliente &amp; Condição de Pagamento</label>
    <nameField>
        <displayFormat>Relação - {000000}</displayFormat>
        <label>N° Relação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clientes &amp; Condições de Pagamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>