force-app/main/default/objects/ClienteCondicaoPagamento__c/fields/CodigoCondPagtoCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoCondPagtoCliente__c</fullName>
    <externalId>true</externalId>
    <label>Código Cond. Pagto x Cliente</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>