force-app/main/default/objects/ClienteCondicaoPagamento__c/fields/ContaId__c.field-meta.xml
<CustomField>
    <fullName>ContaId__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clientes &amp; Condições de Pagamento</relationshipLabel>
    <relationshipName>ClientesCondicoesPagamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>